<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>biz.daich.vocalzoom</groupId>
	<artifactId>experiment.native.image</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>biz.daich.vocalzoom.experiment.native.image</name>
	<description>A demo project that has all the same dependencies and uses same classes as the main app for the sake of the experimenting and debuging of the docker build and native image compile	</description>

	<properties>
		<skipTests>true</skipTests>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>

		<version.spring>2.6.3</version.spring>
		<version.lombok>1.18.22</version.lombok>
		<version.log4j>2.17.1</version.log4j>
		<graalvm.version>21.0.0.2</graalvm.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<jvm.run.options>
			--add-opens
			java.base/jdk.internal.misc=ALL-UNNAMED
			--add-opens
			java.base/java.io=ALL-UNNAMED
			-Aproject=${project.groupId}/${project.artifactId}
		</jvm.run.options>

		<java.compile.options></java.compile.options>

		<!-- THIS SHOULD ACTIVATE The  webstart-publish-profile-id but it does not seems to work... -->
		<webstart-publish-profile-id>true</webstart-publish-profile-id>

		<executableName>experiment-native-image</executableName>
		<TheMainClass>biz.daich.vocalzoom.experiment.nativeimage.JFrameMainNativeImageExperiment</TheMainClass>

	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${version.spring}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>org.graalvm.nativeimage</groupId>
			<artifactId>native-image-maven-plugin</artifactId>
			<version>21.2.0</version>
			<type>maven-plugin</type>
		</dependency>

		<!-- SPRING BOOT WEB -->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>
		<!--
		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>spring-boot-admin-starter-server</artifactId>
			<version>2.5.4</version>
		</dependency>
 -->

		<!-- MQTT -->

		<!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
		<dependency>
			<groupId>org.eclipse.paho</groupId>
			<artifactId>org.eclipse.paho.client.mqttv3</artifactId>
			<version>1.2.5</version>
		</dependency>

		<!-- END of MQTT -->

		<!-- UART  see https://fazecast.github.io/jSerialComm/ -->
		<dependency>
			<groupId>com.fazecast</groupId>
			<artifactId>jSerialComm</artifactId>
			<version>[2.0.0,3.0.0)</version>
		</dependency>
		<!-- END of UART -->

		<!-- CODDING PRODUCTIVITY -->

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- END of CODDING PRODUCTIVITY -->

		<!-- UTILITY LIBS -->

		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.0.1-jre</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>[2.11.0,)</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<!-- <version>2.13.0</version> -->
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
			<!-- <version>2.13.0</version> -->
		</dependency>
		<!-- Needed to parse BSON of the RAW Data over MQTT-->
		<dependency>
			<groupId>de.undercouch</groupId>
			<artifactId>bson4jackson</artifactId>
			<version>2.13.1</version>
		</dependency>

		<!-- Used by the MqttConnectionManager to do not secure communication with TLS host that has certificates issues -->
		<dependency>
			<groupId>io.netty</groupId>
			<artifactId>netty-handler</artifactId>
		</dependency>

		<!-- END of UTILITY LIBS -->

		<!--  ALGORITHMS -->


		<!--  END of ALGORITHMS -->

		<!-- SWING LIBS  -->

		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.5.2</version>
		</dependency>


		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>5.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.formdev/jide-oss -->
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>jide-oss</artifactId>
			<version>3.7.12</version>
		</dependency>

		<dependency>
			<groupId>org.swinglabs.swingx</groupId>
			<artifactId>swingx-all</artifactId>
			<version>1.6.5-1</version>
		</dependency>

		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-binding</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgoodies</groupId>
			<artifactId>jgoodies-forms</artifactId>
			<version>1.9.0</version>
		</dependency>
		<!-- END of SWING LIBS  -->

		<!-- LOGGING -->

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-iostreams</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
		<!-- Required to make the log4j2 Async loggers and appenders to work correctly -->
		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>3.4.4</version>
		</dependency>



		<!-- END of LOGGING  -->

		<!-- Command line options processing -->

		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.6.1</version>
		</dependency>

		<!-- END of Command line options processing -->

		<!-- USED IN TESTS ONLY -->

	
		<!-- This is embedded mqtt broker for tests only! -->
		<dependency>
			<groupId>io.moquette</groupId>
			<artifactId>moquette-broker</artifactId>
			<version>0.15</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-log4j12</artifactId>
				</exclusion>
				<exclusion>
					<groupId>log4j</groupId>
					<artifactId>log4j</artifactId>
				</exclusion>
			</exclusions>

		</dependency>


		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.24</version>
			<scope>test</scope>
		</dependency>


		<dependency>
			<groupId>com.github.wendykierp</groupId>
			<artifactId>JTransforms</artifactId>
			<version>3.1</version>
			<classifier>with-dependencies</classifier>
			<scope>test</scope>
		</dependency>

		<!-- TESTING -->

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<profiles>

		<profile>
			<id>fat-jar</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<archive>
								<manifest>
									<mainClass>${TheMainClass}</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
						<executions>
							<execution>
								<id>make-assembly</id> <!-- this is used for inheritance merges -->
								<phase>package</phase> <!-- bind to the packaging phase -->
								<goals>
									<goal>single</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<!-- maven-resources-plugin -->
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<nonFilteredFileExtensions>
								<nonFilteredFileExtension>jks</nonFilteredFileExtension>
								<nonFilteredFileExtension>bin</nonFilteredFileExtension>
								<nonFilteredFileExtension>exe</nonFilteredFileExtension>
							</nonFilteredFileExtensions>
							<propertiesEncoding>UTF-8</propertiesEncoding>
							<encoding>UTF-8</encoding>
						</configuration>
						<executions>
							<execution>
								<id>default-build-copy</id>
								<goals>
									<goal>resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<resources>
										<resource>
											<directory>src/main/resources</directory>
											<filtering>true</filtering>
										</resource>
									</resources>
								</configuration>
							</execution>
							<execution>
								<id>native-image-meta-inf-copy</id>
								<goals>
									<goal>resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/META-INF/</outputDirectory>
									<resources>
										<resource>
											<directory>src/main/resources/native-image</directory>
											<filtering>false</filtering>
										</resource>
									</resources>
								</configuration>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>
		</profile>

		<!-- ============ BASIC DEFAULT PROFILE BUILDS the EXE ======================== -->

		<profile>

			<!-- 		THIS PROFILE IS ALWAYS ACTIVE UNLESS THE -P option present on the Maven Command Line. -->

			<id>default-activated-profile-id</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<finalName>${executableName}</finalName>

				<plugins>

					<plugin>
						<!-- maven-clean-plugin -->
						<artifactId>maven-clean-plugin</artifactId>
						<version>3.1.0</version>
						<configuration>
							<filesets>
								<fileset>
									<directory>${project.basedir}/bundle/</directory>
									<includes>
										<include>${executableName}.jar</include>
									</includes>
								</fileset>
							</filesets>
						</configuration>
					</plugin>

					<plugin>
						<!-- maven-resources-plugin -->
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<nonFilteredFileExtensions>
								<nonFilteredFileExtension>jks</nonFilteredFileExtension>
								<nonFilteredFileExtension>bin</nonFilteredFileExtension>
								<nonFilteredFileExtension>exe</nonFilteredFileExtension>
							</nonFilteredFileExtensions>
							<propertiesEncoding>UTF-8</propertiesEncoding>
							<encoding>UTF-8</encoding>
						</configuration>
						<executions>
							<execution>
								<id>default-build-copy</id>
								<goals>
									<goal>resources</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<resources>
										<resource>
											<directory>src/main/resources</directory>
											<filtering>true</filtering>
										</resource>
									</resources>
								</configuration>
							</execution>

						


						</executions>
					</plugin>


					<plugin>
						<!-- maven-compiler-plugin -->
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.8.1</version>
						<configuration>
							<annotationProcessorPaths>
								<path>
									<groupId>info.picocli</groupId>
									<artifactId>picocli-codegen</artifactId>
									<version>4.6.1</version>
								</path>
								<path>
									<groupId>org.projectlombok</groupId>
									<artifactId>lombok</artifactId>
									<version>${version.lombok}</version>
								</path>
							</annotationProcessorPaths>
							<compilerArgs>
								<arg>${java.compile.options}</arg>
							</compilerArgs>
						</configuration>
					</plugin>

				
					<plugin>
						<!-- maven-surefire-plugin -->
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>3.0.0-M5</version>
						<configuration>
							<argLine>${jvm.run.options}</argLine>
						</configuration>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-dependency-plugin</artifactId>
						<executions>
							<execution>
								<id>copy-dependencies</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>copy-dependencies</goal>
								</goals>
								<configuration>
									<outputDirectory>${project.build.directory}/lib</outputDirectory>
									<overWriteReleases>false</overWriteReleases>
									<overWriteSnapshots>false</overWriteSnapshots>
									<overWriteIfNewer>true</overWriteIfNewer>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jar-plugin</artifactId>
						<configuration>
							<archive>
								<manifest>
									<addClasspath>true</addClasspath>
									<classpathPrefix>lib/</classpathPrefix>
									<mainClass>${TheMainClass}</mainClass>
								</manifest>
							</archive>
						</configuration>
					</plugin>
					
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<version>0.9.10</version>
						<extensions>true</extensions>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>build</goal>
								</goals>
								<phase>package</phase>
							</execution>
							<execution>
								<id>test-native</id>
								<goals>
									<goal>test</goal>
								</goals>
								<phase>test</phase>
							</execution>
						</executions>
						<configuration>
							<!-- ... -->
							<mainClass>${TheMainClass}</mainClass>
							<imageName>${executableName}</imageName>
							<buildArgs>
								<buildArg>--verbose</buildArg>
							</buildArgs>
						</configuration>
					</plugin>
					
				</plugins>

				<pluginManagement>
					<!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
					<plugins>
						<!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
						<plugin>
							<artifactId>maven-clean-plugin</artifactId>
							<version>3.1.0</version>
						</plugin>
						<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
						<plugin>
							<artifactId>maven-resources-plugin</artifactId>
							<version>3.0.2</version>
						</plugin>
						<plugin>
							<artifactId>maven-compiler-plugin</artifactId>
							<version>3.8.1</version>
						</plugin>
						<plugin>
							<artifactId>maven-surefire-plugin</artifactId>
							<version>2.22.1</version>
						</plugin>
						<plugin>
							<artifactId>maven-install-plugin</artifactId>
							<version>2.5.2</version>
						</plugin>
						<plugin>
							<artifactId>maven-deploy-plugin</artifactId>
							<version>2.8.2</version>
						</plugin>
						<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
						<plugin>
							<artifactId>maven-site-plugin</artifactId>
							<version>3.7.1</version>
						</plugin>
						<plugin>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>3.0.0</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-scm-plugin</artifactId>
							<version>2.0.0-M1</version>
						</plugin>
						<plugin>
							<groupId>com.google.code.maven-replacer-plugin</groupId>
							<artifactId>replacer</artifactId>
							<version>1.5.3</version>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jarsigner-plugin</artifactId>
							<version>3.0.0</version>
						</plugin>
						<plugin>
							<groupId>org.codehaus.mojo</groupId>
							<artifactId>exec-maven-plugin</artifactId>
							<version>3.0.0</version>
						</plugin>
					</plugins>
				</pluginManagement>

			</build>
		</profile>

	</profiles>

</project>